--- a/director_folder/director_config.yaml
+++ b/director_folder/director_config.yaml
@@ -1,4 +1,4 @@
 settings:
   listen_ip: localhost
-  sample_shape: ['64', '128', '3'] # todo
-  target_shape: ['1501']
+  sample_shape: ['1']
+  target_shape: ['1']
